<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailViewModel"
            type="it.jgrassi.roombooking.viewmodel.RoomDetailViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_room"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/photo_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/room_location">

            <ImageView
                android:id="@+id/room_detail_photo1"
                photoUrlDetail="@{detailViewModel.photoUrl1}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxHeight="@dimen/room_detail_photo_size"
                android:maxWidth="@dimen/room_detail_photo_size"
                android:adjustViewBounds="true"
                android:transitionName="@string/room_transition_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/room_detail_photo2"
                photoUrlDetail="@{detailViewModel.photoUrl2}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:maxHeight="@dimen/room_detail_photo_size"
                android:maxWidth="@dimen/room_detail_photo_size"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toStartOf="@+id/room_detail_photo3"
                app:layout_constraintStart_toEndOf="@+id/room_detail_photo1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/room_detail_photo3"
                photoUrlDetail="@{detailViewModel.photoUrl3}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:maxHeight="@dimen/room_detail_photo_size"
                android:maxWidth="@dimen/room_detail_photo_size"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/room_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{detailViewModel.room.location}"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/room_item_location_text_size"
            android:transitionName="@string/room_transition_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room_name"
            tools:text="location" />

        <TextView
            android:id="@+id/room_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{detailViewModel.room.name}"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/room_item_name_text_size"
            android:transitionName="@string/room_transition_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="title" />

        <ImageView
            android:id="@+id/room_detail_size_icon"
            android:layout_width="@dimen/room_item_icons_size"
            android:layout_height="@dimen/room_item_icons_size"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_perm_group_personal_info"
            android:transitionName="@string/room_transition_size_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/room_detail_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@{detailViewModel.room.size}"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/room_item_info_text_size"
            android:transitionName="@string/room_transition_size_label"
            app:layout_constraintEnd_toStartOf="@+id/room_detail_capacity_icon"
            app:layout_constraintTop_toBottomOf="@+id/room_detail_capacity"
            tools:text="size" />

        <ImageView
            android:id="@+id/room_detail_capacity_icon"
            android:layout_width="@dimen/room_item_icons_size"
            android:layout_height="@dimen/room_item_icons_size"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_perm_group_display"
            android:transitionName="@string/room_transition_capacity_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/room_detail_size_icon" />

        <TextView
            android:id="@+id/room_detail_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@{detailViewModel.room.capacity}"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/room_item_info_text_size"
            android:transitionName="@string/room_transition_capacity_label"
            app:layout_constraintEnd_toStartOf="@+id/room_detail_capacity_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="capacity" />

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/availChart"
            availDataDetail="@{detailViewModel.availData}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/room_transition_chart"
            app:layout_constraintTop_toBottomOf="@+id/room_detail_equipment"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/room_detail_equipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{detailViewModel.equipment}"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/room_item_info_text_size"
            android:transitionName="@string/room_transition_equipment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photo_container"
            tools:text="equipment" />


    </android.support.constraint.ConstraintLayout>

</layout>
